@@ -14,11 +14,11 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 Hash: SHA1
 
-SHA1 6d5928fdbff3e93f0103002a09b34a806d828932 Changes
+SHA1 1ca444391d0021bb97629187afb3eb3635521d81 Changes
 SHA1 b7725aa322a04f09f20980fd151d78f9babdd965 MANIFEST
 SHA1 c848e901d3c945d92a788e89ef840ea47fba105a MANIFEST.SKIP
-SHA1 eb256906cd9b1190187a352f9ce51a4abdbe5257 META.yml
-SHA1 3d792c8205f0b488e624e41ba11b2ff93fed62d0 Makefile.PL
+SHA1 f96cba967bf96a23f89bebc5692efda861b7a578 META.yml
+SHA1 6bc0f8cf8ee27d6584b9fcf48aeead7272f7d011 Makefile.PL
 SHA1 ef01906c6da51f3d5224c49885ee83664feb5f8a README
 SHA1 8842ca38ce27ccf75e1ce8f5dfb93fa62d933b2e inc/Module/AutoInstall.pm
 SHA1 171ca38c5eedbe92d2f5eb1e14e1725631960bab inc/Module/Install.pm
@@ -32,20 +32,20 @@ SHA1 ea2c6af29c2339be6fb78edf0924e6951eb40280 inc/Module/Install/Metadata.pm
 SHA1 d2e387590fc4bce3abb1a7282467cb57f6133884 inc/Module/Install/ReadmeFromPod.pm
 SHA1 121a3c95ebbbaea7b75df3ce7e922da7e6a0060f inc/Module/Install/Win32.pm
 SHA1 d9f0ea716ff81c7ae3fcaaf15cc03fb9bf4f01b1 inc/Module/Install/WriteAll.pm
-SHA1 21f34f7101fde39aecb90e945e38855572d5f551 inc/WebService/Cmis/Test.pm
+SHA1 190dad3d48a8e5f165fd6a2421fec36ef4ed9d10 inc/WebService/Cmis/Test.pm
 SHA1 4ba5b44cc0313ec6a6f1326e2eead30966255c06 inc/WebService/Cmis/Test/ACE.pm
 SHA1 ee2d1f47ae8f84a119989ed5ccd87f4b523d26bc inc/WebService/Cmis/Test/ACL.pm
-SHA1 be26e6757570ea724278f3581c35c80e90efa423 inc/WebService/Cmis/Test/AtomFeed.pm
-SHA1 7694142c7df283ba09a9fa0c4bc8831838ec77cb inc/WebService/Cmis/Test/Basics.pm
+SHA1 05db573a7c883958346d9af2e1dfa05287c2aa30 inc/WebService/Cmis/Test/AtomFeed.pm
+SHA1 2445ecd22fff096b9152e3d1a73430d5c0ab4f62 inc/WebService/Cmis/Test/Basics.pm
 SHA1 35f3aa0b80e7d540d9270264c87e37932850794a inc/WebService/Cmis/Test/Client.pm
 SHA1 b1557999e27cdccaf23271bf8ed296dae8efd07f inc/WebService/Cmis/Test/Document.pm
 SHA1 17cbd765372d036a6392ba21223cab15e62ad16d inc/WebService/Cmis/Test/Folder.pm
 SHA1 f40e6a371d8a4c8b35b25eac52c8f3e93c204a63 inc/WebService/Cmis/Test/Object.pm
 SHA1 8271611f5c7f9b6e16ef5075353f3b22a72de906 inc/WebService/Cmis/Test/ObjectType.pm
-SHA1 748be64b3d0f2bd904dd45c0cc6e8bf79267cfa4 inc/WebService/Cmis/Test/Property.pm
+SHA1 1f144b5820b3b21745ad9696b4e5cfa3244efa09 inc/WebService/Cmis/Test/Property.pm
 SHA1 76c1d2cb7a5d583a454bfd123f7daf704d0a665b inc/WebService/Cmis/Test/Repository.pm
 SHA1 c23ff77c707a789bb8be2834655595fd33546493 inc/cmis.cfg.example
-SHA1 9bf581840bb807a22220b1c54c269f1df80d543b lib/WebService/Cmis.pm
+SHA1 e58c719e83efda6ab886cd5378274dc5b15e25e8 lib/WebService/Cmis.pm
 SHA1 4efd307e6faa70ef2e2f7bbe47e484d5840ca4ea lib/WebService/Cmis/ACE.pm
 SHA1 fabbeba51b3f02ef652841cee9c65cf97e4154c0 lib/WebService/Cmis/ACL.pm
 SHA1 55646c5b446c2b9271353502f8450a16b9478dd6 lib/WebService/Cmis/AtomEntry.pm
@@ -95,11 +95,11 @@ SHA1 a284683173bea40e9e4679c1a044700443f8a333 t/pod.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.4.11 (GNU/Linux)
 
-iQEcBAEBAgAGBQJQW32sAAoJEFbHzikUeAidYcoH/3SKy6QeO8v18QtllSQIvIZp
-DqYxnutRDWSQTSi2ccLGfbhKP+009qfOYVKylCEb9CSCsF/7YWIK8+LZfjPJJxeM
-tXQnHcwgHyfD4o8qTmnQuxC1XZBmR2DxVqP9SNErX4MxJUSReFGB6EoCrjqLIdBI
-1L/ChTvoXVlKFkm1hevu8r3nTtfgqyFg0gVmr0rKbnxUTYNI/0zPit9dZ4hNMzjw
-G+rzaQiC8yi/GrnjTbVqcYmGDX0RWRRBHf6xaLgSNF5t1mB6BKKAy3WjJwNogeI7
-XsCNUoupHKDxPXSSoWfjHO1SJDBrRZ/5Y+CPceomovH/my0wTpRjKsYTrQDLbi0=
-=QzJh
+iQEcBAEBAgAGBQJQYbGdAAoJEFbHzikUeAidtzMH/3mjtoYWpeoKw2QcQQ29ZdmX
+x2qL7Ke0+qF4fUDyqNiu62zV9MW+S0+qszPvbFAEmXO6DRPCkuK+yEE+aJ00oRZa
+AdgH9taRSQfKK/oGa6BnPHNnfW8HiSq2GQEZwDnRMJWC8ZQmZ4CdxulPBvmXRKXD
+RAGLNhnpaM4vk8I2F2LikOYuWWwVEVrynZiB6V3Dak4Tnd589ZTvV5V1Ra0iHi2n
+7HZeIXbSXSbT9SfjZl6zGiiddBFADQpdzwrxgY/4lRTXcNkgHuBnh25Niow8t6uo
+qlCyHUHTXVEA5+GyYqzGKku9PZTtg46Ncy15iV0w2z8y0K97f7g9GkX0CJ4ZAIk=
+=+ncb
 -----END PGP SIGNATURE-----
